added sells and paypal button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/animation.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/estilos.css">
@@ -40,7 +41,11 @@
           </div>
           <h1>Producto 1</h1>
           <p>Miles de productos en el mercadoo, pero nada como una caja de cocaina</p>
-          <button href="#" class="main_button">Lo quiero</button>
+          <a href="venta.html">
+            <button class="main_button" >
+              Lo quiero
+            </button>
+          </a>
     </div>
   </div>
   <div class="product fadeInUp">
@@ -50,7 +55,11 @@
           </div>
           <h1>Producto 2</h1>
           <p>Miles de productos en el mercadoo, pero nada como una caja de cocaina</p>
-          <button href="#" class="main_button">Lo quiero</button>
+          <a href="venta.html">
+            <button class="main_button" >
+              Lo quiero
+            </button>
+          </a>
     </div>
   </div>
 </div>
@@ -117,7 +126,7 @@
 <!-- Aquí empieza el Footer (pata) -->
 <footer>
 <div class= "option">Terminos y condiciones</div>
-<div class= "option">youremail@gmail.com</div>
+<div class= "option contact"><a href="mail:to:youremail@gmail.com">youremail@gmail.com</a></div>
 </footer>
 <!-- Aqui termina el footer -->
 
