--- a/producto.html
+++ b/producto.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/animation.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/estilos.css">
   <link rel="stylesheet" href="css/mobile.css">
-
   <title>Brandy</title>
 </head>
+
 <body>
 
   <!-- Aqui empieza el navbar -->
@@ -26,7 +27,28 @@
     </nav>
 <!-- Aquí termina el navbar -->
 
-<h3>qpex carnal</h3>
+<h1>Productos</h1>
+<!-- Producto 1 -->
+<div class="container">
+  <div class="row">
+      <div class="col-5">  <img src="image/box.jpg"class="imagen" alt=""></div>
+      <div class="col-7"> <h2>Caja Misteriosa 1</h2> <p>Encontrarás en la caja misteriosa 1 una amplia variedad de cositas de colores jejej </p></div>
+  </div>
+</div>
+<!-- Fin producto 1 -->
+<div class="container">
+  <div class="row">
+    <div class="col-7"> <h2>Caja Misteriosa 2</h2> <p>Déjate sorprender por una increíble selección de bebidas enerrgizantes con tus ingredientes favoritos :) </p></div>
+      <div class="col-5">  <img src="image/box.jpg"class="imagen" alt=""></div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+      <div class="col-5">  <img src="image/box.jpg"class="imagen" alt=""></div>
+      <div class="col-7">  <h2>Caja Misteriosa 3</h2> <p>Puedes elegir entre una lavadora, un millón de dólares o lo que hay en esta caja misteriosa. *wink* *wink* </p></div>
+  </div>
+</div>
+
 
 <!-- Aquí empieza el Footer (pata) -->
 <footer>
@@ -34,8 +56,5 @@
 <div class= "option">youremail@gmail.com</div>
 </footer>
 <!-- Aqui termina el footer -->
-
-
-
   </body>
   </html>
