--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <img src="image/box1.png" alt="">
           </div>
           <h1>Producto 1</h1>
-          <p>Miles de productos en el mercadoo, pero nada como una caja de cocaina</p>
+          <p>Miles de productos en el mercadoo, pero nada como una caja misteriosa del Sr. Burns </p>
           <a href="venta.html">
             <button class="main_button" >
               Lo quiero
@@ -54,7 +54,7 @@
               <img src="image/box2.png" alt="">
           </div>
           <h1>Producto 2</h1>
-          <p>Miles de productos en el mercadoo, pero nada como una caja de cocaina</p>
+          <p>Miles de productos en el mercadoo, pero nada como una caja misteriosa del Sr. Burns</p>
           <a href="venta.html">
             <button class="main_button" >
               Lo quiero
@@ -68,22 +68,22 @@
       <div class="feature">
           <div class="content">
             <img src="image/image1.png" alt="">
-            <h3>Las más fuertes</h3>
-            <p>Arruina tu vida con las bestest drugs jeje</p>
+            <h3> El Misterio... </h3>
+            <p>¿Un perro?, ¿Un elefante?, ¿Un diamante? <br> QUIEN SABE </p>
           </div>
       </div>
       <div class="feature">
           <div class="content">
             <img src="image/image2.png" alt="">
-            <h3>Las más fuertes</h3>
-            <p>Arruina tu vida con las bestest drugs jeje</p>
+            <h3>Incrementa tu karma </h3>
+            <p> Ayuda a una hermana, amigx </p>
           </div>
       </div>
       <div class="feature">
           <div class="content">
             <img src="image/image3.png" alt="">
-            <h3>Las más fuertes</h3>
-            <p>Arruina tu vida con las bestest drugs jeje</p>
+            <h3>Vamos, no puedes resistirlo</h3>
+            <p>Cuestan 15 pesos, es menos que una caguama, ándale. </p>
           </div>
       </div>
 </div>
@@ -97,21 +97,21 @@
         <div class="content">
           <img src="image/image4.png" alt="">
           <h3>Mario</h3>
-          <p>Me hice adicto a la coca y al criko gracias a esta página jejej</p>
+          <p> Me dieron una bonita imagen inédita. Totally Worth it </p>
         </div>
       </div>
       <div class="mencion">
         <div class="content">
           <img src="image/image5.png" alt="">
           <h3>Martha</h3>
-          <p>Arruiné mi vida y mi carrera por esta tienda, vendo organos vitales. q creisi</p>
+          <p>Yo te curé varios rasguños que te hicieron por ahí.</p>
         </div>
       </div>
       <div class="mencion">
           <div class="content">
               <img src="image/image6.png" alt="">
               <h3>Karen</h3>
-              <p>Pushi, estoy en drogas , esto no es un meme</p>
+              <p>Can I speak with your manager? </p>
           </div>
       </div>
       <div class="mencion">
